--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,10 +1,16 @@
+runtime: "container"
+build:
+  dockerfile: "Dockerfile"           # Path to your Dockerfile
+  dockerBuildPath: "."               # Docker build context
 startCommand:
-    type: http
-    configSchema:
-      type: object
-      required: ["apiKey"]
-      properties:
-        apiKey:
-          type: string
-          title: "Personal Access Token (PAT)"
-          description: "Required OpenBB PAT used to authenticate requests"
+  type: "http"
+  configSchema:                      # JSON Schema for configuration
+    type: "object"
+    properties:
+      apiKey:
+        type: "string"
+        title: "Personal Access Token (PAT)"
+        description: "Required OpenBB PAT used to authenticate requests"
+    required: ["apiKey"]
+  exampleConfig:
+    apiKey: "sk-example123"
